# cogninote-agent-design

./: .gitattributes  .gitignore  README.md  cogninote-agent-design.md  pom.xml
cogniNote-agent-front/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
cogniNote-agent-front/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
cogniNote-agent-front/src-tauri/capabilities/: default.json
cogniNote-agent-front/src-tauri/icons/: icon.icns
cogniNote-agent-front/src-tauri/src/: lib.rs  main.rs
cogniNote-agent-front/src-tauri/windows/: hooks.nsh
docs/: api-reference.md  cogninote-agent-design.md  desktop-build-guide.md  maintainability-refactor-plan.md  model-configuration-guide.md  model-settings-rewrite-bugfix-plan.md  phase-1-foundation-plan.md  phase-10-knowledge-base-folders-plan.md  phase-11-agent-model-runtime-refactor-plan.md  phase-12-ai-markdown-rendering-plan.md  phase-13-chat-memory-and-spring-ai-rag-plan.md  phase-14-macos-desktop-packaging-plan.md  phase-15-desktop-distribution-plan.md  phase-17-element-plus-settings-center-plan.md  phase-18-multi-agent-routing-plan.md  phase-19-desktop-install-upgrade-reliability-plan.md  phase-2-document-ingestion-plan.md  phase-20-code-aware-retrieval-optimization-plan.md  phase-21-query-contextualizer-agent-plan.md  phase-22-context-window-token-estimation-plan.md  phase-23-query-contextualizer-auto-trigger-plan.md  phase-25-knowledge-graph-plan.md  phase-26-knowledge-graph-explorer-redesign-plan.md  phase-27-desktop-security-auto-update-plan.md  phase-29-chat-references-plan.md  (+13 more)
(+615 files in other folders)
