[package]
name = "cogninote-agent"
version = "0.1.36"
description = "CogniNote Agent desktop shell"
authors = ["CogniNote Agent"]
edition = "2021"

[lib]
name = "cogninote_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10.1"
